HDL ANT Deployment Package/retrieveUnpackaged/objects/Location_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Location Contacts</relationshipLabel>
        <relationshipName>Location_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Contacts</relationshipLabel>
        <relationshipName>Location_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Practice Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Location Contact</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Location Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>